Merge add-gradle-support to project